# cmake_demo

./: CMakeLists.txt  README.md  vcpkg.json
apps/: CMakeLists.txt  app_adv.cpp  app_basic.cpp
include/calc/: advanced.h  basic.h
src/: CMakeLists.txt
src/calc/: advanced.cpp  basic.cpp
tests/: CMakeLists.txt
tests/calc/: advanced.test.cpp  basic.test.cpp
